WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79549
Scoped stylesheets don't appear to work in Shadow DOM
https://bugs.webkit.org/show_bug.cgi?id=79549
Summary
Scoped stylesheets don't appear to work in Shadow DOM
Dimitri Glazkov (Google)
Reported
2012-02-24 18:57:02 PST
* Create a shadow DOM subtree * Add scoped stylesheet to it * Observe that the styles don't match anything in the shadow DOM tree. Last checked at
r108661
. For an example, see:
http://dglazkov.github.com/Web-Components-Polyfill/
Attachments
work-in-progress
(20.84 KB, patch)
2012-02-28 04:00 PST
,
Roland Steiner
no flags
Details
Formatted Diff
Diff
Patch
(25.73 KB, patch)
2012-03-01 22:30 PST
,
Roland Steiner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Roland Steiner
Comment 1
2012-02-28 02:53:09 PST
Indeed! :P Attempting to use the host element as "anchor" for the style scope is probably a bad idea in the first place - working on a patch.
Roland Steiner
Comment 2
2012-02-28 04:00:01 PST
Created
attachment 129226
[details]
work-in-progress
Roland Steiner
Comment 3
2012-03-01 22:30:50 PST
Created
attachment 129821
[details]
Patch
WebKit Review Bot
Comment 4
2012-03-02 05:27:42 PST
Comment on
attachment 129821
[details]
Patch Clearing flags on attachment: 129821 Committed
r109563
: <
http://trac.webkit.org/changeset/109563
>
WebKit Review Bot
Comment 5
2012-03-02 05:27:49 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 6
2012-03-05 09:18:02 PST
It seems like this changeset caused ~25% regression on Parser/html5-full-render.html:
http://webkit-perf.appspot.com/graph.html#tests=[[3068,2001,3001]]&sel=1330690990310,1330703206709&displayrange=7&datatype=running
http://webkit-perf.appspot.com/graph.html#tests=[[3068,2001,3001],[3068,2001,173262]]&sel=1330693225546.817,1330698934586.7354&displayrange=7&datatype=running
Ryosuke Niwa
Comment 7
2012-03-05 09:25:12 PST
See
https://bugs.webkit.org/show_bug.cgi?id=79963#c13
for further information.
Roland Steiner
Comment 8
2012-03-06 02:50:50 PST
found the culprit -> patch submitted in
bug 80404
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug