Source/WebCore/css/CSSStyleSelector.h
@@ -107,8 +107,10 @@ public:
     ~CSSStyleSelector();
 
     // Using these during tree walk will allow style selector to optimize child and descendant selector lookups.
-    void pushParent(Element* parent);
-    void popParent(Element* parent);
+    void pushParentElement(Element*);
+    void popParentElement(Element*);
+    void pushParentShadowRoot(const ShadowRoot*);
+    void popParentShadowRoot(const ShadowRoot*);
 
     PassRefPtr<RenderStyle> styleForElement(Element*, RenderStyle* parentStyle = 0, bool allowSharing = true, bool resolveForRootDefault = false, RenderRegion* regionForStyling = 0);
 
@@ -149,6 +151,14 @@ private:
     bool canShareStyleWithElement(StyledElement*) const;
 
     PassRefPtr<RenderStyle> styleForKeyframe(const RenderStyle*, const WebKitCSSKeyframeRule*, KeyframeValue&);
+
+#if ENABLE(STYLE_SCOPED)
+    void pushScope(const ContainerNode* scope, const ContainerNode* scopeParent);
+    void popScope(const ContainerNode* scope);
+#else
+    void pushScope(const ContainerNode*, const ContainerNode*) { }
+    void popScope(const ContainerNode*) { }
+#endif
 
 public:
     // These methods will give back the set of rules that matched for a given element (or a pseudo-element).
@@ -289,8 +299,8 @@ private:
     };
 
     struct MatchOptions {
-        MatchOptions(bool includeEmptyRules, const Element* scope = 0) : scope(scope), includeEmptyRules(includeEmptyRules) { }
-        const Element* scope;
+        MatchOptions(bool includeEmptyRules, const ContainerNode* scope = 0) : scope(scope), includeEmptyRules(includeEmptyRules) { }
+        const ContainerNode* scope;
         bool includeEmptyRules;
     };
 
@@ -310,7 +320,7 @@ private:
     void sortMatchedRules();
     void sortAndTransferMatchedRules(MatchResult&);
 
-    bool checkSelector(const RuleData&, const Element* scope = 0);
+    bool checkSelector(const RuleData&, const ContainerNode* scope = 0);
     bool checkRegionSelector(CSSSelector* regionSelector, Element* regionElement);
     void applyMatchedProperties(const MatchResult&);
     template <bool firstPass>
@@ -453,29 +463,29 @@ private:
 #endif
 
 #if ENABLE(STYLE_SCOPED)
-    static const Element* determineScopingElement(const CSSStyleSheet*);
+    static const ContainerNode* determineScope(const CSSStyleSheet*);
 
-    typedef HashMap<const Element*, OwnPtr<RuleSet> > ScopedRuleSetMap;
+    typedef HashMap<const ContainerNode*, OwnPtr<RuleSet> > ScopedRuleSetMap;
 
-    RuleSet* scopedRuleSetForElement(const Element*) const;
+    RuleSet* ruleSetForScope(const ContainerNode*) const;
 
-    void setupScopingElementStack(const Element*);
-    bool scopingElementStackIsConsistent(const Element* parent) const { return parent && parent == m_scopingElementStackParent; }
+    void setupScopeStack(const ContainerNode*);
+    bool scopeStackIsConsistent(const ContainerNode* parent) const { return parent && parent == m_scopeStackParent; }
 
     ScopedRuleSetMap m_scopedAuthorStyles;
     
     struct ScopeStackFrame {
-        ScopeStackFrame() : m_element(0), m_ruleSet(0) { }
-        ScopeStackFrame(const Element* element, RuleSet* ruleSet) : m_element(element), m_ruleSet(ruleSet) { }
-        const Element* m_element;
+        ScopeStackFrame() : m_scope(0), m_ruleSet(0) { }
+        ScopeStackFrame(const ContainerNode* scope, RuleSet* ruleSet) : m_scope(scope), m_ruleSet(ruleSet) { }
+        const ContainerNode* m_scope;
         RuleSet* m_ruleSet;
     };
     // Vector (used as stack) that keeps track of scoping elements (i.e., elements with a <style scoped> child)
     // encountered during tree iteration for style resolution.
-    Vector<ScopeStackFrame> m_scopingElementStack;
+    Vector<ScopeStackFrame> m_scopeStack;
     // Element last seen as parent element when updating m_scopingElementStack.
     // This is used to decide whether m_scopingElementStack is consistent, separately from SelectorChecker::m_parentStack.
-    const Element* m_scopingElementStackParent;
+    const ContainerNode* m_scopeStackParent;
 #endif
 
     friend class CSSStyleApplyProperty;
